force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_Payment__c/breadwinner_qbo__BW_AP_Bill_Payment__c.object-meta.xml
<CustomObject>
    <description>Bill Payment Events from QuickBooks Online</description>
    <label>Bill Payment</label>
    <nameField>
        <label>Bill Payment Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>