force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_Payment__c/fields/breadwinner_qbo__Last_Modified_in_QBO_Date__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Last_Modified_in_QBO_Date__c</fullName>
    <label>Last Modified in QuickBooks Online Date</label>
    <type>DateTime</type>
</CustomField>