force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_Payment__c/fields/breadwinner_qbo__See_this_Payment_in_QBO__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__See_this_Payment_in_QBO__c</fullName>
    <formula>HYPERLINK( &quot;https://&quot;&amp;IF( CONTAINS(breadwinner_qbo__QBO_Org_Name__c , &quot;Sandbox Company&quot;), &quot;sandbox.&quot; ,&quot;&quot;)&amp;&quot;qbo.intuit.com/app/billpayment?txnId=&quot;&amp;RIGHT(breadwinner_qbo__Payment_Id__c ,(LEN(breadwinner_qbo__Payment_Id__c)-FIND(&#39;-&#39;, breadwinner_qbo__Payment_Id__c))),
&quot;Click Here&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>See this Payment in QuickBooks Online</label>
    <type>Text</type>
</CustomField>